Update telegram account settings and sync api schemas
